Move game up on mobile to avoid keyboard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,7 +444,8 @@ input[type=number] {
     font-size: 17px;
   }
   .game-container {
-    height: auto
+    height: auto;
+    gap: 1rem;
   }
 }
 @media screen and (max-width: 456px) {
@@ -465,7 +466,8 @@ input[type=number] {
     padding: 20px;
   }
   .game-container {
-    height: auto
+    height: auto;
+    gap: 1rem;
   }
   }
 /* V2 KEEP ON BOTTOM */
